FIX: Alignment of social media logos in footer

--- a/css/swag.css
+++ b/css/swag.css
@@ -1,6 +1,6 @@
 .header{
 	text-align: center;
-	font-size: 4em;
+	font-size: 4rem;
 }
 .footer{
 	background-color: #ddd9df;
@@ -16,7 +16,7 @@
 }
 .center{
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 1.5rem;
 }
 .space-optional{
 	margin-top: 5vh;
